asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_constructor_return_type.asteriacore
data Unit where
   | MkUnit : \(a : Type) -> Test$Unit()
   ;;
